--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -1,5 +1,5 @@
 .homepage__casestudies-featured {
-  padding: 0 6.4vw 14.4vw 6.4vw;
+  padding: 0 6.25vw 12.5vw 6.25vw;
   background-color: $black;
   color: $white;
   position: relative;
@@ -7,7 +7,7 @@
 }
 .casestudy-featured {
   position: relative;
-  padding-top: 14.4vw;
+  padding-top: 12.5vw;
   color: $white;
   &.--white {
     color: $black;
@@ -26,15 +26,15 @@
 }
 @include media-min($ipad) {
   .homepage__casestudies-featured {
-    padding: 7vw 6.4vw;
+    padding: 6.25vw;
   }
   .casestudy-featured--grid {
     padding-top: 0;
     display: grid;
-    grid-row-gap: 7vw;
+    grid-row-gap: 8.333vw;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    grid-column-gap: 6.4vw;
+    grid-column-gap: 6.25vw;
     .casestudy-featured {
       padding: 0;
     }
@@ -42,16 +42,19 @@
 }
 @include media-min($ipad-pro) {
   .homepage__casestudies-featured {
-    padding: 10vw 10vw;
+    padding: 12.5vw 8.333vw;
   }
   .casestudy-featured--grid {
-    grid-column-gap: 10vw;
+    grid-column-gap: 8.333vw;
   }
   .grid--wide {
     grid-column: 1 / span 2; 
  } 
 }
 @include media-min($desktop) {
+  .homepage__casestudies-featured {
+    padding: 12.5vw;
+  }
   .casestudy-featured {
     &.--white {
       color:$black;
@@ -83,8 +86,8 @@
     pointer-events: none;
   }
 }
-@include media-min(1680px) {
+@include media-min($desktop-xxl) {
   .homepage__casestudies-featured {
-    padding: 10vw 14vw;
+    padding: 12.5vw 16.667vw;
   }
 }
