--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -26,6 +26,18 @@
   color: $color;
 }
 
+@mixin work-card($color) {
+  font-size: 18px;
+  line-height: 1.6667;
+  color: $color;
+  @include media-min($desktop-xl) {
+    font-size: 20px;
+  }
+  @include media-min($desktop-xxl) {
+    font-size: 24px;
+  }
+}
+
 @mixin body-copy($color) {
   @include fluid-type(18, 26);
   // font-size: 1.7rem;
