--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -13,7 +13,7 @@
     color: $black;
   }
   p {
-    @include label(inherit);
+    @include work-card(inherit);
   }
   .casestudy-featured__hero {
     width: 100%;
