removed bottom padding on about page videos

--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -26,6 +26,9 @@
       object-fit: cover;
     }
   }
+  &.media--about {
+    padding-bottom: 0;
+  }
 }
 .media--wide {
   padding-left: 6.25vw; 
