--- a/src/styles/components/_casestudy.scss
+++ b/src/styles/components/_casestudy.scss
@@ -14,7 +14,7 @@
 }
 .next-btn {
   display: block;
-  text-align: right;
+  text-align: center;
   width: 84vw;
   padding: 19.2vw 8vw 34.133vw 8vw;
   a {
