--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,7 +23,7 @@ body {
   overflow-x: hidden;
 }
 
-h1, h2, p, img, div, button, a {
+h1, h2, p, img, div, button, a, figure, summary, section, nav, main, figcaption, article {
   margin: 0;
   padding: 0;
 }
