homepage exhibition card padding tweak

--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -26,7 +26,7 @@
 }
 @include media-min($ipad) {
   .homepage__casestudies-featured {
-    padding: 6.25vw;
+    padding: 8.333vw 6.25vw;
   }
   .casestudy-featured--grid {
     padding-top: 0;
