--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -34,7 +34,8 @@
   padding-left: 6.25vw; 
   padding-right: 6.25vw;
   &.video-player--wrap {
-    height: 44.52vw;
+    //height: 44.52vw;
+    height: 45vw;
   }
 }
 .media--fullwidth {
@@ -59,6 +60,9 @@ div.video-player > div {
   .media--wide {
     padding-left: 12.5vw;
     padding-right: 12.5vw;
+    &.video-player--wrap {
+      height: 40vw;
+    }
   }
 }
 @include media-min($ipad-pro) {
