--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -52,7 +52,27 @@
     padding: 0 12.5vw 9.375vw 12.5vw;
   }
 }
+@include media-min($ipad-pro) {
 
+}
+@include media-orientation($ipad-pro, 1279px, landscape) {
+  .about__header {
+    margin-bottom: 11.5px;
+    div.pull-quote {
+      padding-top: 16.667vw;
+      
+    }
+  }
+  #about__email-link { 
+    margin: 0 16.667vw;
+  }
+  .dyptich--wrapper {
+    padding-bottom: 18.75vw;
+  }
+  .about-videos__info {
+    padding: 0 12.5vw 9.375vw 12.5vw;
+  }
+}
 
 
 
