--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -48,4 +48,11 @@ br {
 
 a {
   text-decoration: none;
+  color: inherit;
+  transition: opacity 200ms ease-out;
+}
+
+a:hover {
+  opacity: .4;
+  transition: opacity 200ms ease-out;
 }
