--- a/src/styles/components/slices/_body_text_slice.scss
+++ b/src/styles/components/slices/_body_text_slice.scss
@@ -6,6 +6,13 @@
   padding-right: 6.25vw;
   padding-left: 6.25vw;
   white-space:pre-line;
+  a {
+    transition: opacity 200ms ease-out;
+  }
+  a:hover {
+    opacity: .4;
+    transition: opacity 200ms ease-out;
+  }
 }
 @include media-min($ipad) {
   .body-copy {
