link hover styles in casestudies

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -15,6 +15,7 @@ $desktop-mega: 2560px;
 $black: #000;
 $white: #fff;
 $light-grey: #B4B4B4;
+$dark-grey: #7A7A7A;
 
 //SPACING 
 $xxs-padding: 4vw;
