--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -101,7 +101,7 @@
 @mixin slider-wrap {
   @include flexbox;
   -webkit-overflow-scrolling: touch;
-  scroll-snap-type: x mandatory;
+  // scroll-snap-type: x mandatory;
   touch-action: pan-y;
   overflow-x: auto;
   overflow-y: hidden;
