finessing the video module height

--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -98,14 +98,14 @@ div.video-player > div {
   }
   .media--wide {
     &.video-player--wrap {
-        height: 43vw;
+        // height: 43vw;
     }
   }
 }
 @include media-min($desktop-lrg) {
   .media--wide {
     &.video-player--wrap {
-        height: 43.5vw;
+        // height: 43.5vw;
     }
   }
 }
