--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -12,8 +12,10 @@
     padding: 0;
     video {
       flex-shrink: 0;
-      height: 100%;
+      // height: 100%;
+      min-height: 100%;
       width: auto;
+      min-width: 100%;
     }
   }
   &.homepage-header__vid {
