--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -61,6 +61,9 @@
   line-height: 1.3;
   letter-spacing: -.59px;
   color: $color;
+  @include media-min(480px) {
+    font-size: 6.375vw;
+  }
   @include media-min($ipad) {
     font-size: 5.5vw;
     letter-spacing: -.5px;
