adjusted casestudy header bug again

--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -1,14 +1,19 @@
+.autoplay-hero__wrap {
+  width: 100%;
+  height: 100%;
+}
+
 .media {
   @include media-vertical-rhythm;
   img, video{
     width: 100%;
   }
   &.autoplay-hero {
-    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    @include entire-viewport;
+    height: 100%;
+    width: 100%;
     padding: 0;
     video {
       flex-shrink: 0;
